--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port=8082
+
+
+keycloak.realm = blablaconf
+keycloak.auth-server-url = http://keycloak:8080/auth
+keycloak.resource = api
+keycloak.credentials.secret = 21b4052f-940f-4deb-a40a-db9e4b9d098d
+keycloak.bearer-only=true
+
+
+keycloak.securityConstraints[0].authRoles[0] = user
+keycloak.securityConstraints[0].securityCollections[0].patterns[0] = /
