refractor: add demo data, and readme

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8082
 
 
-keycloak.realm = blablaconf
+keycloak.realm = ${KEYCLOAK_REALM:blablaconf}
 keycloak.auth-server-url = http://keycloak:8080/auth
-keycloak.resource = api
-keycloak.credentials.secret = 21b4052f-940f-4deb-a40a-db9e4b9d098d
+keycloak.resource = ${KEYCLOAK_CLIENT:api}
+keycloak.credentials.secret = ${KEYCLOAK_CLIENT_SECRET:b808cff7-0314-49d2-9793-8e0ab26b0f2b}
 keycloak.bearer-only=true
 
 
